2004-11-29  Roger While <simrw@sim-basis.de>

	* New directory bin for cobcrun driver program
	* configure.ac, Makefile.am

2004-10-30  Roger While <simrw@sim-basis.de>

	* configure.ac, configure (over autoconf) :
	  Change entry point name check from __db_dbopen
	  to __db_open. This fixes configuring against
	  the NPTL versions of DB (eg. Red Hat, Suse).

2004-08-02  Keisuke Nishida  <knishida@open-cobol.org>

	* Version 0.30 released.

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* configure.ac: Checks for fcntl.

2003-08-22  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* libcob.conf: Removed.

2003-06-12  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.23 released.

2003-06-08  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.22 released.

2003-05-19  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.21 released.

2003-04-26  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.20 released.

2003-04-19  Keisuke Nishida  <knishida@netlab.jp>

	* cob.pc.in: Removed.

	* cobpp: Removed.

2002-03-01  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.12 released.

2002-01-31  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.11 released.

2002-12-10  Keisuke Nishida  <knishida@netlab.jp>

	* Version 0.10 released.

	* configure.ac: Updated for autoconf-2.57, and automake-1.7.2.

2002-12-01  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Updated for autoconf-2.56, automake-1.7.1,
	and libtool-1.4.3.

2002-11-08  Keisuke Nishida  <knishida@netlab.jp>

	* libcob.h: Don't include support.h.

2002-10-14  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am: Install libcob.conf in $(sysconfdir), not in
	$(sysconfdir)/open-cobol.
	* configure.ac (COB_CONFIG_FILE): Updated.

2002-09-30  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Updated for autoconf-2.54 and automake-1.7.
	Do not generate libcob/cobconfig.h.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* configure.ac: Generate libcob/cobconfig.h using AM_CONFIG_HEADER.